--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> 
-    <title>React App</title>
+    <title>Smart Restaurant</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
